<resources>
    <string name="app_name">My Library</string>
    <string name="app_name_persian">کتابخانه من</string>
    <string name="app_version">نسخه 6.0</string>
    <string name="home_t1">یه شروع لذت بخش ...</string>
    <string name="home_all">همه داستان ها</string>
    <string name="home_cat">دسته بندی ها</string>
    <string name="home_about">درباره ما</string>
    <string name="home_sub1">کتابخانه من ؟!</string>
    <string name="home_sub2">چرا کتاب؟</string>
    <string name="menu_rate">امتیاز به برنامه</string>
    <string name="menu_share">اشتراک گذاری برنامه</string>
    <string name="menu_aboutUs">درباره کتابخانه من</string>
    <string name="menu_exit">خروج</string>
    <string name="settings_title">تنظیمات</string>
    <string name="settings_t0">باتوجه به نسخه اندروید گوشی شما، برخی تنظیمات ممکن است در دسترس نباشد.</string>
    <string name="settings_t1">تغییر تم برنامه</string>
    <string name="settings_t2">تغییر سایز متن</string>
    <string name="settings_t3">این متن برای تست می‌باشد.</string>
    <string name="settings_dark">تم تاریک</string>
    <string name="settings_light">تم روشن</string>
    <string name="settings_default">پیشفرض</string>
    <string name="about_t">حمایت از ما</string>
    <string name="about_b2">امتیاز به برنامه</string>
    <string name="about_b3">اشتراک گذاری برنامه</string>
    <string name="about_t2">(: درباره ما :)</string>
    <string name="about_tx1">ساخته شده توسط محمد حسین حمیدی</string>
    <string name="about_tx2">Copyright © 1398-1403 MHH Releases</string>
    <string name="about_tx3">10 Ordibehesht 1403 Released</string>
    <string name="about_tx4">منبع: 1. namnak.com</string>
    <string name="sub1_t1">خب خب ، سلام ... \n
    اینجا میخوام بهتون بگم بالاخره چرا کتابخانه من؟! \n
    کتابخانه من اولین اپلیکیشن رسمی ما هست که نسخه اول اون تابستان 1398 منتشر شد و خب قطعا از نظر UI و UX خیلی ابتدایی و ناقص بود. اما امروز به لطف استقبال خوب شما از این برنامه داریم جدیدترین نسخه از اون رو منتشر میکنیم تا نشون بدیم بازخورد شما برامون مهمه. \n
    البته این به معنای بی نقص بودن اپلیکیشن نیست و خب این راه هنوز ادامه داره و ما بازخورد های شما رو همچنان در ادامه میبینیم. \n
    خلاصه بگم که برای آینده هم برنامه های خوبی داریم.</string>
    <string name="sub1_t2">و اما حالا چرا باید این اپلیکیشن رو روی گوشیمون داشته باشیم؟ \n
    اول اینکه داستان های کوتاه برای اوقات فراغت گزینه بسیار خوبی هست و ما به این فکر افتادیم کاری کنیم که اونها همیشه و به صورت رایگان در دسترس شما باشن و بتونید توی مترو، اتوبوس، بین کارهاتون و خلاصه همه جا ازش استفاده کنید. و خب به نظرم توی دوره ای که افراد خیلی کم کتاب میخونن میتونه انگیزه خوبی باشه. \n
    البته ما تلاشمون رو کردیم که برای همه سلیقه ها داستان وجود داشته باشه و این راه رو ادامه میدیم. \n
    و در آخر هم این خبر خوب رو بهتون میدم که اپلیکیشن کتابخانه من در آینده قرار نیست فقط شامل داستان های کوتاه باشه. پس منتظر باشید ... \n
    ممنون از همراهی تون</string>
    <string name="sub2_t1">اینجا میخوام سعی کنم قانعتون کنم کتاب بخونید . پس یکم گشتم و براتون از دلایل مختلف کتاب خوندن آوردم ...</string>
    <string name="sub2_t2">۱. کتاب خواندن ورزشی برای مغز است. \n
    همان‌قدر که جسمِ شما برای سالم ماندن به ورزش و تحرک احتیاج دارد، مغز شما هم نیاز دارد که به‌کار گرفته شود و ورزش کند تا سالم بماند. کتاب‌ خواندن فعالیتی است که باعث می‌شود جریان خون شما افزایش پیدا کند و مغز شما بهتر کار کند. \n\n
    ۲. ایده‌های جدید و حل‌کردن مشکلات \n
    آیا تابه‌حال شده است که داستانی رازآلود بخوانید و پیش از آنکه کتاب به پرسش‌های شما درباره‌ی داستان پاسخ دهد، خودتان به آن‌ها پاسخ دهید و اتفاقات کتاب را پیش‌بینی کنید؟ پژوهش‌ها نشان می‌دهد که کتاب‌خواندن باعث می‌شود که الگوها را بهتر دنبال کنید، مشکلات را بهتر حل کنید، خودتان را به‌جای شخصیت‌های داستان قرار دهید و قدرت تجریه و تحلیل مغزتان را افزایش دهید. \n\n
    ۳. بهتر می‌نویسید \n
    زمانی که کتاب می‌خوانید، مغزتان تکنیک‌های نویسندگی و واژه‌ها را جذب می‌کند. همین موضوع باعث می‌شود که زمانی که می‌نویسید، به‌شکل ناخودآگاه آن سبک‌ها را در ذهنتان داشته باشید و از آن‌ها استفاده کنید. همچنین خواندنِ کتاب، دایره‌ی لغات شما را افزایش می‌دهد؛ حتی اگر معنیِ واژه‌ای را ندانید، می‌توانید به‌شکلِ طبیعی و از واژگانِ اطرافش، معنی آن را بفهمید و در نوشتنتان از آن‌ها استفاده کنید. \n\n
    ۴. بهتر صحبت می‌کنید \n
    از آن‌جایی که کتاب خواندن دایره‌ی واژگان شما را افزایش می‌دهد و به شما یاد می‌دهد که چگونه از آن واژگان در جملات استفاده کنید، باعث می‌شود که بهتر و فصیح‌تر هم صحبت کنید. علاوه‌بر آن، اطلاعاتی را که از کتاب به‌دست می‌آورید، موضوعاتِ تازه‌ای را برای صحبت‌کردن پیشِ پای شما می‌گذارد.</string>
    <string name="sub2_t3">۵. جهان‌بینی شما را تحت‌تأثیر قرار می‌دهد \n
    ممکن است برایتان پیش آمده باشد که جمله‌ای از آشنایی دور، شیوه‌ی فکرکردنتان را نسبت به موضوعی خاص تغییر دهد. کتاب‌خواندن، این فرصت را به شما می‌دهد که با عقایدِ نویسنده‌ی کتاب آشنا شوید؛ حتی اگر کتابی بخوانید که نظرات متفاوتی با شما دارد، می‌تواند شما را با دیدگاه‌های مختلف آشنا کند و باعث شود اعتقادات و جهان‌بینی خود را واردِ چالش کنید و آن‌ها را تغییر دهید یا پخته‌تر کنید. \n\n
    ۶. تمرکز شما را افزایش می‌دهد \n
    کتابی را انتخاب کنید و بخوانید که به اندازه‌ی کافی برایتان جذاب باشد؛ این کار برای مغز شما تمرین تمرکز هم هست. در این حالت، مغز شما تلاش می‌کند که با موضوع کتاب ارتباط بگیرد و برای درکِ بهتر روی داستان تمرکز کند. \n\n
    ۷. قدرت تخیلتان را به بازی دعوت می‌کند \n
    با خواندن هر کتاب، مخصوصاً اگر کتابی داستانی باشد، شما خود را به‌جای شخصیت‌های داستانی قرار می‌دهید و به جای او فکر می‌کنید، احساس می‌کنید و رفتار می‌کنید. ویلیام استیرون، نویسندۀ آمریکایی، می‌گوید: «بعد از خواندنِ یک کتاب خوب معمولاً خسته می‌شوید؛ چراکه به‌جای افرادِ بسیاری زندگی کرده‌اید.» \n\n
    ۸. خواندن الهام‌بخش \n
    خواندن یک کتابِ خوب، مانند بودن در کنار فردی است که دوستش دارید و از او الهام می‌گیرید. همانطور که رفتارهای آن فرد را مشاهده می‌کنید و رفتارهایی را که دوست دارید تکرار می‌کنید، یک کتابِ خوب هم می‌تواند روی رفتارِ شما تأثیر بگذارد. \n\n
    ۹. استرس را کاهش می‌دهد \n
    بسیاری از پژوهشگران، می‌گویند که وقتی شما خودتان را در خواندنِ یک کتابِ خوب رها می‌کنید و مغزتان به‌دنبال ایده‌ها و موضوعات جدید می‌گردد، زمانی که خودتان را به‌جای شخصیتی جدید می‌گذارید و به‌جای او زندگی می‌کنید، اعصابتان آرام‌تر است و تنش‌های ماهیچه‌ای و قلبی‌تان کاهش پیدا می‌کند.</string>
    <string name="categories_title">دسته بندی ها</string>
    <string name="categories_t1">عاطفی</string>
    <string name="categories_t2">مذهبی</string>
    <string name="categories_t3">غمگین</string>
    <string name="categories_t4">خنده و طنز</string>
    <string name="categories_t5">درس آموز</string>
    <string name="cat_emotional_title">داستان های عاطفی</string>
    <string name="cat_religious_title">داستان های مذهبی</string>
    <string name="cat_sad_title">داستان های غمگین</string>
    <string name="cat_fun_title">داستان های طنز</string>
    <string name="cat_instructive_title">داستان های درس آموز</string>
    <string name="stories_title">همه داستان ها</string>
    <string name="stories_tsto1">ارتباط قلبی</string>
    <string name="stories_tsto2">ادیسون</string>
    <string name="stories_tsto3">چوپان</string>
    <string name="stories_tsto4">وقتی که او مرد</string>
    <string name="stories_tsto5">یک لنگه کفش</string>
    <string name="stories_tsto6">مجازات شغالان</string>
    <string name="stories_tsto7">خبر مرگ نوبل</string>
    <string name="stories_tsto8">مراقبت</string>
    <string name="stories_tsto9">آتش و گنجشک</string>
    <string name="stories_tsto10">خطر آسایش</string>
    <string name="stories_tsto11">پیرمرد بازنشسته</string>
    <string name="stories_tsto12">پسرک و خدا</string>
    <string name="stories_tsto13">ابوریحان و مزدور</string>
    <string name="stories_tsto14">پنجره طلایی</string>
    <string name="stories_tsto15">دیدن خدا</string>
    <string name="stories_tsto16">اول رئیس</string>
    <string name="stories_tsto17">داروی جدید</string>
    <string name="stories_tsto18">پدر و پسر</string>
    <string name="stories_tsto19">پادشاه بی خرد</string>
    <string name="stories_tsto20">پندهای لقمان</string>
    <string name="stories_tsto21">پند دزد</string>
    <string name="stories_tsto22">پیرمرد</string>
    <string name="stories_tsto23">تور تفریحی پیرزن ها</string>
    <string name="stories_tsto24">بازرگان و انوشیروان</string>
    <string name="stories_tsto25">بلیط سیرک</string>
    <string name="stories_tsto26">بهترین شمشیرزن</string>
    <string name="stories_tsto27">تلفن و طلاق</string>
    <string name="stories_tsto28">تقلا</string>
    <string name="stories_tsto29">بهترین هدیه</string>
    <string name="stories_tsto30">راننده کامیون</string>
    <string name="stories_tsto31">مراحل تشرف</string>
    <string name="stories_tsto32">پلیکان</string>
    <string name="stories_tsto33">جنگ و نیزه</string>
    <string name="stories_tsto34">ادعای خدایی</string>
    <string name="stories_tsto35">فریب</string>
    <string name="stories_tsto36">بیکاری</string>
    <string name="stories_tsto37">مرد فقیر</string>
    <string name="stories_tsto38">توقع زیاد</string>
    <string name="stories_tsto39">پیرمرد خردمند</string>
    <string name="stories_tsto40">خانم و آقای لطفی</string>
    <string name="stories_tsto41">جواب فورد</string>
    <string name="stories_tsto42">خط صاف</string>
    <string name="stories_tsto43">مرد ثروتمند</string>
    <string name="stories_tsto44">دو سطل</string>
    <string name="stories_tsto45">تلاش بیهوده</string>
    <string name="stories_tsto46">استراحت کوتاه مادرانه</string>
    <string name="stories_tsto47">ارزش هر شخص</string>
    <string name="stories_tsto48">نتیجه دروغگویی</string>
    <string name="stories_tsto49">هنر گوش دادن</string>
    <string name="stories_tsto50">سمعک ارزان قیمت</string>
    <string name="stories_tsto51">غذای مجانی</string>
    <string name="stories_tsto52">پل دوستی</string>
    <string name="stories_tsto53">سکوت و راستی</string>
    <string name="stories_tsto54">چهره حق</string>
    <string name="stories_tsto55">مرد فاسق و حضرت موسی</string>
    <string name="stories_tsto56">مرد فقیر و ثروتمند</string>
    <string name="stories_tsto57">مرده متحرک</string>
    <string name="stories_tsto58">خودخواهی</string>
    <string name="stories_tsto59">شکستن چوب‌ها</string>
    <string name="stories_tsto60">تیمارستان</string>
    <string name="sto1_t1">در عصر یخبندان بسیاری از حیوانات یخ زدند و مردند. می‌گویند خارپشت ها وخامت اوضاع را دریافتند و تصمیم گرفتند دور هم جمع شوند و بدین ترتیب همدیگر را حفظ کنند. \n
        وقتی نزدیکتر به هم بودند گرمتر می‌شدند؛ ولی خارهایشان یکدیگر را زخمی می‌کرد. بخاطر همین تصمیم گرفتند از هم دور شوند ‫ولی از سرما یخ زده و می مردند.‬ از اینرو مجبور بودند یا خارهای دوستان را تحمل کنند، یا نسلشان منقرض شود. پس دریافتند که بهتر است باز گردند و گرد هم آیند و آموختند که: با زخم کوچکی که همزیستی با کسان بسیار نزدیک به وجود می‌آورد زندگی کنند، چون گرمای وجود دیگری مهمتر است. این چنین توانستند زنده بمانند. \n
        بهترین رابطه این نیست که اشخاص بی عیب و نقص را گرد هم می آورد بلکه آن است هر کسی با دیگری ارتباط قلبی عمیق داشته باشد و فرد بیاموزد با معایب دیگران کنار آید و خوبی های آنان را تحسین نماید.</string>
    <string name="sto2_t1">ادیسون در سنین پیری پس از اختراع چراغ برق یکی از ثروتمندان آمریکا به شمار می رفت و درآمد سرشارش را تمام و کمال در آزمایشگاه مجهزش که در ساختمان بزرگی قرارداشت، هزینه می کرد. \n
        این آزمایشگاه بزرگترین عشق پیرمرد بود. در همین روزها بود که نیمه های شب از اداره آتش نشانی به پسر ادیسون اطلاع دادند، آزمایشگاه پدرش در آتش می سوزد و حقیقتا کاری از دست کسی بر نمی آید و تمام تلاش ماموران فقط جلو گیری از گسترش آتش به سایر ساختمان ها است. آنها تقاضا داشتند که موضوع به نحو قابل قبولی به اطلاع پیرمرد رسانده شود. \n
        پسر با خود اندیشید که احتمالا پیرمرد با شنیدن این خبر سکته می کند و لذا از بیدار کردن پیرمرد منصرف شد و خودش را به محل حادثه رساند و با تعجب دید که پیر مرد در مقابل ساختمان آزمایشگاه روی یک صندلی نشسته است و سوختن حاصل تمام عمرش را نظاره می کند.</string>
</resources>