<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sub2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".Sub2_activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:background="@drawable/header"
                android:gravity="center"
                android:text="@string/home_sub2"
                android:textColor="@color/white"
                android:textSize="25sp"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imv1"
                style="@style/MainImageView"
                android:layout_below="@id/header"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="7dp"
                android:layout_marginTop="10dp"
                android:transitionName="trans4"
                android:visibility="visible" />

            <TextView
                android:id="@+id/t1"
                style="@style/SimpleTextview"
                android:layout_below="@+id/imv1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sub2_t1" />

            <TextView
                android:id="@+id/t2"
                style="@style/SimpleTextview"
                android:layout_below="@+id/t1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sub2_t2" />

            <ImageView
                android:id="@+id/im1"
                style="@style/MainImageView"
                android:layout_below="@id/t2"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/t3"
                style="@style/SimpleTextview"
                android:layout_below="@+id/im1"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sub2_t3" />

            <ImageView
                android:id="@+id/im2"
                style="@style/MainImageView"
                android:layout_below="@id/t3"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="7dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />

        </RelativeLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>